<resources>
    <string name="app_name">Drink more water</string>
    <string name="app_name_2">Water Monster</string>
    <string name="action_settings">Settings</string>
    <string name="disable_notif">Inactive</string>
    <string name="enable">Active</string>
    <string name="instructions_msg">Press the icon if have drunk some water</string>
    <string name="water_increment_content_desc">Press to add water</string>
    <string name="enable_notif_title">Enable notifications</string>
    <string name="enable_notif_key" translatable="false">enable_notif</string>
    <string name="is_alarm_enabled" translatable="false">is_alarm_enabled</string>
    <string name="notif_on_wifi_title">Notifications only on Wifi</string>
    <string name="notif_on_wifi_key" translatable="false">enable_on_wifi</string>
    <string name="notif_when_charging_title">Notification only when charging</string>
    <string name="notif_when_charging_key" translatable="false">enable_when_charging</string>
    <string name="default_water_count">0</string>
    <string name="notification_channel_name">Primary</string>
    <string name="water_text_toast">Drinking...Drinking....</string>
    <string name="charging_reminder_notification_title">Where\'s that water?</string>
    <string name="charging_reminder_notification_body">There\'s never a better time to drink water than now. Drink up!</string>
    <string name="interval_key" translatable="false">interval_key</string>
    <string name="list_preference_title">Notification frequency in min</string>
    <string name="interval_value" translatable="false">20</string>
    <string name="no_internet_message">You have no internet connection</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="cup">Select your cup size!</string>
    <string name="share">Tell the world!</string>
    <string name="rate">Rate the app!</string>
    <string name="about">About</string>
    <string name="progress">Daily progress</string>
    <string name="sync">Sync</string>
</resources>
