<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_enable_notif"
        android:key="@string/enable_notif_key"
        android:summaryOff="@string/disable_notif"
        android:summaryOn="@string/enable"
        android:title="@string/enable_notif_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_enable_on_wifi"
        android:key="@string/notif_on_wifi_key"
        android:summaryOff="@string/disable_notif"
        android:summaryOn="@string/enable"
        android:title="@string/notif_on_wifi_title" />

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:defaultValue="@bool/pref_enable_when_charg"
        android:key="@string/notif_when_charging_key"
        android:summaryOff="@string/disable_notif"
        android:summaryOn="@string/enable"
        android:title="@string/notif_on_wifi_title" />
</PreferenceScreen>