<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions_msg" />

    <FrameLayout
        android:id="@+id/fl_water_increment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--android:onClick="testSaving"-->
        <ImageButton
            android:id="@+id/ib_water_increment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/water_increment_content_desc"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_water_glass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Centering TextView within image -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_water_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_water_count"
                android:textColor="#424242"
                android:textSize="35sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_networkView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff323232"
        android:paddingLeft="24dp"
        android:paddingTop="18dp"
        android:paddingRight="24dp"
        android:paddingBottom="18dp"
        android:text="@string/no_internet_message"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        android:visibility="invisible" />
</LinearLayout>